# libspectrum

./: 404.html  CMakeLists.txt  README.md  build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  recorded_spectrum  setup.py
.github/workflows/: release.yml
dev-docs/architecture/: index.html
dev-docs/cmd/: index.html
dev-docs/develop-environment/: index.html
dev-docs/driver-docs/: index.html
dev-docs/platform-limitations/: index.html
dev-docs/usb-context/: index.html
dev-docs/usb-device/: index.html
docs/: index.md  installation.md  reference.md
docs/dev-docs/: architecture.md  cmd.md  develop-environment.md  driver-docs.md  platform-limitations.md  usb-context.md  usb-device.md
docs/user-docs/: guide.md  installation.md  overview.md  usb-device.md
examples/: colorimeter.ipynb  exposure_setting.py  real_time_demo.py  simple_notebook.ipynb
examples/colorimeter/: index.html
examples/led_parameters/: index.html  led_parameters.ipynb
examples/pyrometer/: index.html
examples/record_spectrum/: index.html  record_spectrum.ipynb
examples/simple_notebook/: index.html
installation/: index.html
mock/: README.md  User_man.md  mock.py  mock_ethernet.py  mock_ethernet_device.py  mock_usb.py  realtime_graph.py  receiving_information.ipynb  record_spectrum.py
pyspectrum/: __init__.py  device_factory.py  ethernet_device.py  mock_usb.py  spectrometer.py  usb_context.py  usb_device.py
pyspectrum_debug/: ethernet_device.py
reference/: index.html
search/: search_index.json
tests/: test_spectrometer.py
usb_device_cpp/: Frame.h  UsbContext.h  UsbDevice.cpp  UsbDevice.h  pymodule.cpp
user-docs/guide/: index.html
user-docs/installation/: index.html
user-docs/overview/: index.html
user-docs/usb-device/: index.html
