[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "libspectrum"
version = "0.0.1"
description = "Library for communication with VMK spectrometer through USB interface"
authors = []
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib", "scipy"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
readme-file = "README.md"

[project.optional-dependencies]
windows = ["ftd2xx==1.3.8"]

[tool.hatch.build.targets.wheel]
packages = ["pyspectrum"]
artifacts = ["usb_device.*.so"]

[tool.hatch.build.targets.wheel.hooks.custom]
dependencies = ["pybind11"]
path = "build.py"

[tool.mkdocs]
site_name = "Pyspectrum documentation"
theme = "material"
plugins = ["mkdocstrings", "mkdocs-jupyter"]

[tool.isort]
profile = "black"

[tool.cibuildwheel]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"
