[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libspectrum"
version = "0.0.2"
description = "Library for communication with VMK spectrometer through USB interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "ftd2xx==1.3.8; platform_system == 'Windows'",
]
authors = [{ name = "Egor Bondar", email = "egorbondar825@gmail.com" }]
maintainers = [{ name = "Egor Bondar", email = "egorbondar825@gmail.com" }]
keywords = ["spectrometer", "USB", "library"]

[project.optional-dependencies]
mkdocs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
]

[tool.hatch.build]
reproducible = false

[project.urls]
Documentation = "https://routybor.github.io/libspectrum/"
"Source code" = "https://github.com/Routybor/libspectrum"

[tool.hatch.build.targets.wheel]
packages = ["pyspectrum"]
artifacts = ["usb_device.*.so"]

[tool.hatch.build.targets.wheel.hooks.custom]
dependencies = ["pybind11"]
path = "build.py"

[tool.mkdocs]
site_name = "Pyspectrum documentation"
theme = "material"
plugins = ["mkdocstrings", "mkdocs-jupyter"]

[tool.isort]
profile = "black"

[tool.cibuildwheel]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"
